# profile.ivi.ico-uxf-homescreen-sample-apps

./: Makefile.am  configure.ac  groups  org.tizen.ico.app-samplenavi.desktop  org.tizen.ico.app-soundsample.desktop  org.tizen.ico.app-vicsample.desktop  project.config
data/: samplenavi_conf_dist.edc
ico-app-miscellaneous/: browser  browser.xml  navigator.xml  terminal.xml  weekeyboard.xml
ico-app-samplenavi/: org.tizen.ico.app-samplenavi.desktop
ico-app-samplenavi/data/: make.sh  samplenavi_conf.edc
ico-app-samplenavi/res/: landmark3.csv  samplenavi.conf
ico-app-samplenavi/res/Map/js/: navi.js  navi_defines.js  navi_route.js
ico-app-samplenavi/src/: Makefile.am  define.h  samplenavi.c  samplenavi.h
ico-app-soundsample/: org.tizen.ico.app-soundsample.desktop  org.tizen.ico.app-soundsample.xml  soundsample_config.txt
ico-app-soundsample/src/: Makefile.am  soundsample.c  soundsample.h  soundsample_pulse_async_test.cpp  soundsample_yswavfile.cpp  soundsample_yswavfile.h
ico-app-vicsample/: org.tizen.ico.app-vicsample.desktop  org.tizen.ico.app-vicsample.xml  vicsample_config.txt
ico-app-vicsample/src/: Makefile.am  vicsample.c
packaging/: ico-uxf-HomeScreen-sample-app.changes  ico-uxf-HomeScreen-sample-app.spec  ico-uxf-homescreen-sample-apps.changes  ico-uxf-homescreen-sample-apps.spec
res/: config.txt  landmark2.csv
res/Map/: map.html
res/Map/css/: navi.css
res/Map/js/: nativeapp_accessor.js  navi.js  navi_defines.js
src/: Makefile  Makefile.am  Makefile.in  define.h  e3d.c  e3d.h  samplenavi.c  samplenavi.h  soundsample.c  soundsample_pulse_async_test.cpp  soundsample_yswavfile.cpp
src/.deps/: ico_app_soundsample-soundsample.Po  ico_app_soundsample-soundsample_pulse_async_test.Po  ico_app_soundsample-soundsample_yswavfile.Po  ico_app_vicsample-vicsample.Po
wgt/: DemoMeterApp.wgt
