##ico-app-vicsample
app_vicsample_bindir = /usr/apps/org.tizen.ico.app-vicsample/bin
app_vicsample_bin_PROGRAMS = ico-app-vicsample
 
ico_app_vicsample_SOURCES = vicsample.c 
ico_app_vicsample_LDADD = -L/usr/lib -lico-util -lico-uxf-weston-plugin -lcapi-appfw-application -laul -lwebsockets -lecore_evas -lecore -leina -levas -lrt -lecore_wayland -lelementary -lm -leet -lecore_file -ledje -lecore_imf -lecore_con -ldbus-1 -lpthread -lbundle
ico_app_vicsample_CFLAGS = -Wall -I. -I../../common/include -I/usr/include/aul -I/usr/include/appfw -I/usr/include/eina-1 -I/usr/include/eina-1/eina/ -I/usr/include/ecore-1 -I/usr/include/evas-1 -I/usr/include/elementary-1 -I/usr/include/eet-1 -I/usr/include/edje-1 -I/usr/include/e_dbus-1 -I/usr/include/efreet-1 -I/usr/include/ethumb-1 -I/usr/include/dbus-1.0 -I/usr/lib/dbus-1.0/include -I/usr/include/ico-util

